# jexpr

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  pyproject.toml  test_jexpr.ipynb
.ipynb_checkpoints/: test_jexpr-checkpoint.ipynb
include/: exprtk.hpp
include/jexpr/: jexpr.hpp
interface/cpp/: jexpr.cpp
interface/js/: README.md  build.sh  docker-compose.yml  emscripten_interface.cxx  test_jexpr.html
src/: invalid_reads.cpp
src/tests/: tests.cxx
