[build-system]
requires = ["scikit-build-core >=0.4.3", "pybind11", "typing_extensions"]
build-backend = "scikit_build_core.build"

[project]
name = "jexpr"
version = "0.0.1"
description = "JEXPR: JSON definition of mathematical EXPRessions"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Ian Bell", email = "ian.bell@nist.gov" },
]
#classifiers = [
#    "License :: BSD",
#]

[project.urls]
Homepage = "https://github.com/your/project"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

cmake.args = ["-DJEXPR_PYBIND11=ON"]

#cmake.verbose = true
#cmake.build-type = "Debug"
#cmake.args = ["-G Xcode", "-DXCODE_DEBUG_PYTHON=ON"]
#cmake.args = ["-DVERBOSE=ON"]